
themesdefaultdir = $(prefix)/share/gtalx/themes/default

themesdefault_DATA = info.txt \
		     connectdlg.css maindlg.css calldlg.css \
		     chatding.wav incomingring.wav outgoingring.wav \
		     pic_calldlg.png pic_connectdlg.png\
		     icon_gtalx.png \
		     icon_contact_away.png icon_contact_away_p.png icon_contact_busy.png icon_contact_busy_p.png \
		     icon_contact_off.png icon_contact_online.png icon_contact_online_p.png

EXTRA_DIST = $(themesdefault_DATA)
